# EmbeddedCBasic

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  accessingFixedMemory.c  clearBits.c  const.c  dataDeclarations.c  infiniteLoops.c  interruptsHandling.c  preprocessor.c  setBits.c  static.c  toggleBits.c  typedefExample.c
